--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/CommonModules/\u0421\u043F\u0435\u0446_PostgreSQL/Module.bsl=UTF-8
 encoding/<project>=UTF-8
